--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Página Principal</title>
+    <style>
+        /* Estilo para el body */
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #e0f7fa;
+        }
+
+        /* Estilo para el título */
+        .titulo {
+            color: black;
+            margin-bottom: 30px;
+        }
+
+        /* Estilo para los botones */
+        .boton {
+            background-color: #007bff;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .boton:hover {
+            background-color: #0856b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Página Principal</h1>
-    <button onclick="location.href='/formulario1'">Formulario 1</button>
-    <button onclick="location.href='/formulario2'">Formulario 2</button>
+    <h1 class="titulo">Página Principal</h1>
+    <button class="boton" onclick="location.href='/formularionotas'">App Notas</button>
+    <button class="boton" onclick="location.href='/formularionombres'">App Nombres</button>
 </body>
 </html>
