--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Página Principal</title>
     <style>
-        /* Estilo para el body */
         body {
             display: flex;
             flex-direction: column;
@@ -13,36 +12,53 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #e0f7fa;
+            background-color: white;
         }
 
-        /* Estilo para el título */
         .titulo {
             color: black;
             margin-bottom: 30px;
         }
 
-        /* Estilo para los botones */
+        .botones {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+
         .boton {
-            background-color: #007bff;
+            width: 150px;
+            height: 150px;
             color: black;
             border: none;
-            padding: 10px 20px;
-            margin: 10px;
             cursor: pointer;
             font-size: 16px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
 
-        .boton:hover {
-            background-color: #0856b3;
+        .boton-rosado {
+            background-color: #E34CE5;
+        }
+
+        .boton-rosado:hover {
+            background-color: #ff1493;
+        }
+
+        .boton-verde {
+            background-color: #64FF61;
+        }
+
+        .boton-verde:hover {
+            background-color: #4DDEA0;
         }
     </style>
 </head>
 <body>
     <h1 class="titulo">Página Principal</h1>
-    <button class="boton" onclick="location.href='/formularionotas'">App Notas</button>
-    <button class="boton" onclick="location.href='/formularionombres'">App Nombres</button>
+    <div class="botones">
+        <button class="boton boton-rosado" onclick="location.href='/formulario1'">Ejercicio 1</button>
+        <button class="boton boton-verde" onclick="location.href='/formulario2'">Ejercicio 2</button>
+    </div>
 </body>
 </html>
